--- a/accueil/style.css
+++ b/accueil/style.css
@@ -34,11 +34,13 @@ ul i.fa-solid.fa-handshake-angle {
   min-height: 100vh;
   background: #000;
   overflow: hidden;
-  z-index: 10;
+  z-index: 0;
   animation: center 3s linear;
-  position: absolute;
+  position: fixed;
   opacity: 0;
   width: 100%;
+  height: 100%;
+  top: 0;
 }
 .center .ring {
   position: absolute;
@@ -88,9 +90,11 @@ ul i.fa-solid.fa-handshake-angle {
 @keyframes center {
   0% {
     opacity: 1;
+    z-index: 10;
   }
   100% {
     opacity: 0;
+    z-index: 0;
   }
 }
 /******************************************************************************************/
