--- a/alafrançaise/style.scss
+++ b/alafrançaise/style.scss
@@ -19,54 +19,38 @@ $primary-color: #F6F6F6;
 $secondary-color: #FFFFFF;
 $footer-color: #353535;
 $text-center: center;
-$font-size14: 14px;
+$font-size14: 13px;
 $font-size16: 16px;
 $font-size18: 18px;
 $font-weight200: 200;
 
 /***************************************************************************************/
-@mixin nav-desktop {
-
-    @media (min-width:912px) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 15px;
-        width: 18%;
-    }
-}
-
-/***************************************************************************************/
-@mixin footer-desktop {
+@mixin footer {
     background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 15px;
-    padding: 72px 0 20px;
-
-    .contact {
-        cursor: pointer;
-    }
-
-    a {
-        text-decoration: none;
-        color: $secondary-color;
-    }
+    color: $secondary-color;
+    padding: 4px 18px 20px;
 
     @media (min-width:912px) {
         display: flex;
         flex-direction: row-reverse;
         justify-content: flex-start;
         align-items: baseline;
+        padding-left: 15px;
+        padding: 72px 0 20px;
     }
 
-    .para-logo {
-        font-family: 'Shrikhand', cursive;
-        padding: 16px 0px;
+    a {
+        text-decoration: none;
+        color: $secondary-color;
 
-        @media (min-width:912px) {
-            padding: 0 50px;
-            font-size: $font-size18;
+        .para-logo {
+            font-family: 'Shrikhand', cursive;
+            padding: 16px 0px;
+
+            @media (min-width:912px) {
+                padding: 0 50px;
+                font-size: $font-size18;
+            }
         }
     }
 
@@ -84,12 +68,14 @@ $font-weight200: 200;
 
     li {
         @extend %padding-bottom;
+        cursor: pointer;
 
         @media (min-width:912px) {
             padding-right: 20px;
         }
     }
 }
+
 
 /***************************************************************************************/
 @mixin btn-menu {
@@ -129,7 +115,6 @@ $font-weight200: 200;
 
 /***************************************************************************************/
 @mixin choix {
-
     background: $secondary-color;
     width: 100%;
     border: none;
@@ -157,58 +142,36 @@ $font-weight200: 200;
         padding-right: 19px;
         padding-top: 25px;
     }
-
-    .content-price-checkbox {
-        display: flex;
-    }
-
-    .checkbox {
-        margin-right: -67px;
-        background-color: #99E2D0;
-        color: white;
-        padding: 20px;
-        transition: margin-right 500ms ease-in-out;
-        border-radius: 0px 15px 15px 0px;
-        display: flex;
-        align-items: center;
-    }
-
-    .description-top {
-        padding-bottom: 7px;
-        font-size: 16px;
-        @extend %trois-petit-point;
-    }
-
-    .description-bottom {
-        font-size: $font-size14;
-        font-weight: 300;
-        @extend %trois-petit-point;
-
-        @media (min-width:912px) {
-            font-size: $font-size16;
-        }
-    }
 }
 
-/***************************************************************************************/
-@mixin footer {
-    background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 25px;
+.content-price-checkbox {
+    display: flex;
+}
 
-    p {
-        font-family: 'Shrikhand', cursive;
-        padding: 16px 0px;
-    }
+.checkbox {
+    margin-right: -67px;
+    background-color: #99E2D0;
+    color: white;
+    padding: 20px;
+    transition: margin-right 500ms ease-in-out;
+    border-radius: 0px 15px 15px 0px;
+    display: flex;
+    align-items: center;
+}
 
-    ul {
-        list-style: none;
-        font-size: $font-size14;
-        @extend %padding-bottom;
-    }
+.description-top {
+    padding-bottom: 7px;
+    font-size: $font-size16;
+    @extend %trois-petit-point;
+}
 
-    li {
-        @extend %padding-bottom;
+.description-bottom {
+    font-size: $font-size14;
+    font-weight: 300;
+    @extend %trois-petit-point;
+
+    @media (min-width:912px) {
+        font-size: $font-size16;
     }
 }
 
@@ -229,11 +192,8 @@ $font-weight200: 200;
         margin-right: auto;
     }
 }
-
-%trois-petit-point {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+%padding-bottom {
+    padding-bottom: 10px;
 }
 
 /***************************************************************************************/
@@ -252,20 +212,30 @@ nav {
         }
     }
 
+    @media (min-width:912px) {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        width: 18%;
+    }
+
     i.fa-solid.fa-arrow-left {
-        padding-left: 30px;
+        padding-left: 15px;
     }
 
     .photo-logo {
         width: 50%;
-        margin-left: 52px;
-        margin-right: 57px;
+        margin-left: 46px;
+        margin-right: 80px;
         @include nav-desktop;
     }
 
     .photo-accueil {
         width: 100%;
         height: 231px;
+        object-fit: cover;
 
         @media (min-width:912px) {
             height: 564px;
@@ -273,6 +243,7 @@ nav {
     }
 }
 
+/***************************************************************************************/
 main {
     background: $primary-color;
     border-radius: 40px 40px 0px 0px;
@@ -310,7 +281,7 @@ main {
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            transition: transform, background-image 1s;
+            transition: opacity 3s ease-in-out;
             cursor: pointer;
 
             &:hover {
@@ -351,10 +322,10 @@ main {
 
 .entrées {
     padding: 0 8px;
-    font-size: 16px;
+    font-size: $font-size16;
     padding: 24px 0 15px 13px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    animation: fadein 1.5s;
+    animation: menu-appear ease-in-out 1500ms backwards;
 
     @media (min-width:912px) {
         width: 60%;
@@ -369,50 +340,38 @@ main {
     }
 }
 
-@-webkit-keyframes puff-in-center {
+@keyframes menu-appear {
     0% {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        -webkit-filter: blur(4px);
-        filter: blur(4px);
+        -webkit-transform: translateY(50px);
+        transform: translateY(50px);
         opacity: 0;
     }
 
+    50% {
+        opacity: .5;
+    }
+
     100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-filter: blur(0px);
-        filter: blur(0px);
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
 
-@keyframes puff-in-center {
-    0% {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        -webkit-filter: blur(4px);
-        filter: blur(4px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-filter: blur(0px);
-        filter: blur(0px);
-        opacity: 1;
-    }
+%trois-petit-point {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .choix {
     @include choix;
 }
 
+
 .plats {
     padding: 0 8px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    animation: menu-appear ease-in-out 1500ms 1s backwards;
 
     .title {
         font-size: 16px;
@@ -422,13 +381,13 @@ main {
     @extend %media-query-choix;
     @extend %title-choix;
     @include main-titre;
+
 
 }
 
 .desserts {
     padding: 0 8px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    animation: menu-appear ease-in-out 1500ms 2s backwards;
 
     .title {
         font-size: 16px;
@@ -438,6 +397,7 @@ main {
     @extend %media-query-choix;
     @extend %title-choix;
     @include main-titre;
+
 }
 
 .boutton-commander {
@@ -447,11 +407,6 @@ main {
         margin-left: 200px;
     }
 
-}
-
-
-%padding-bottom {
-    padding-bottom: 10px;
 }
 
 footer {
