--- a/lapalettedugout/menus.scss
+++ b/lapalettedugout/menus.scss
@@ -25,39 +25,32 @@ $font-size18: 18px;
 $font-weight200: 200;
 
 /***************************************************************************************/
-@mixin nav-desktop {
-
-    @media (min-width:912px) {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 15px;
-        width: 18%;
-    }
-}
-
-/***************************************************************************************/
-@mixin footer-desktop {
-
+@mixin footer {
     background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 15px;
-    padding: 72px 0 20px;
+    color: $secondary-color;
+    padding: 4px 18px 20px;
 
     @media (min-width:912px) {
         display: flex;
         flex-direction: row-reverse;
         justify-content: flex-start;
+        align-items: baseline;
+        padding-left: 15px;
+        padding: 72px 0 20px;
     }
 
-    .para-logo {
-        font-family: 'Shrikhand', cursive;
-        padding: 16px 0px;
+    a {
+        text-decoration: none;
+        color: $secondary-color;
 
-        @media (min-width:912px) {
-            padding: 0 50px;
-            font-size: $font-size18;
+        .para-logo {
+            font-family: 'Shrikhand', cursive;
+            padding: 16px 0px;
+
+            @media (min-width:912px) {
+                padding: 0 50px;
+                font-size: $font-size18;
+            }
         }
     }
 
@@ -75,6 +68,7 @@ $font-weight200: 200;
 
     li {
         @extend %padding-bottom;
+        cursor: pointer;
 
         @media (min-width:912px) {
             padding-right: 20px;
@@ -121,7 +115,6 @@ $font-weight200: 200;
 
 /***************************************************************************************/
 @mixin choix {
-
     background: $secondary-color;
     width: 100%;
     border: none;
@@ -131,7 +124,6 @@ $font-weight200: 200;
     border-radius: 15.0431px;
     cursor: pointer;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     @extend %trois-petit-point;
 
@@ -169,7 +161,7 @@ $font-weight200: 200;
 
 .description-top {
     padding-bottom: 7px;
-    font-size: 16px;
+    font-size: $font-size16;
     @extend %trois-petit-point;
 }
 
@@ -180,28 +172,6 @@ $font-weight200: 200;
 
     @media (min-width:912px) {
         font-size: $font-size16;
-    }
-}
-
-/***************************************************************************************/
-@mixin footer {
-    background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 25px;
-
-    p {
-        font-family: 'Shrikhand', cursive;
-        padding: 16px 0px;
-    }
-
-    ul {
-        list-style: none;
-        font-size: $font-size14;
-        @extend %padding-bottom;
-    }
-
-    li {
-        @extend %padding-bottom;
     }
 }
 
@@ -222,6 +192,9 @@ $font-weight200: 200;
         margin-right: auto;
     }
 }
+%padding-bottom {
+    padding-bottom: 10px;
+}
 
 /***************************************************************************************/
 nav {
@@ -239,14 +212,23 @@ nav {
         }
     }
 
+    @media (min-width:912px) {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        width: 18%;
+    }
+
     i.fa-solid.fa-arrow-left {
-        padding-left: 30px;
+        padding-left: 15px;
     }
 
     .photo-logo {
         width: 50%;
-        margin-left: 52px;
-        margin-right: 57px;
+        margin-left: 46px;
+        margin-right: 80px;
         @include nav-desktop;
     }
 
@@ -261,6 +243,7 @@ nav {
     }
 }
 
+/***************************************************************************************/
 main {
     background: $primary-color;
     border-radius: 40px 40px 0px 0px;
@@ -298,7 +281,7 @@ main {
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            transition: transform, background-image 1s;
+            transition: opacity 3s ease-in-out;
             cursor: pointer;
 
             &:hover {
@@ -339,10 +322,10 @@ main {
 
 .entrées {
     padding: 0 8px;
-    font-size: 16px;
-    padding: 24px 15px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    font-size: $font-size16;
+    padding: 24px 0 15px 13px;
+    animation: fadein 1.5s;
+    animation: menu-appear ease-in-out 1500ms backwards;
 
     @media (min-width:912px) {
         width: 60%;
@@ -351,51 +334,29 @@ main {
     }
 
     .title {
-        padding-left: 3px;
-        padding-bottom: 13px;
-
         @media (min-width:912px) {
             margin: 0;
         }
     }
 }
 
-@-webkit-keyframes puff-in-center {
+@keyframes menu-appear {
     0% {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        -webkit-filter: blur(4px);
-        filter: blur(4px);
+        -webkit-transform: translateY(50px);
+        transform: translateY(50px);
         opacity: 0;
     }
 
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-filter: blur(0px);
-        filter: blur(0px);
-        opacity: 1;
-    }
-}
-
-@keyframes puff-in-center {
-    0% {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        -webkit-filter: blur(4px);
-        filter: blur(4px);
-        opacity: 0;
+    50% {
+        opacity: .5;
     }
 
     100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-filter: blur(0px);
-        filter: blur(0px);
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
-
 
 %trois-petit-point {
     overflow: hidden;
@@ -404,87 +365,13 @@ main {
 }
 
 .choix {
-    background: $secondary-color;
-    width: 100%;
-    border: none;
-    text-align: left;
-    margin-bottom: 12px;
-    box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-    border-radius: 15.0431px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    @extend %trois-petit-point;
-
-    &:hover {
-        .checkbox {
-            margin-right: 0;
-        }
-    }
-
-    .description {
-        padding: 10px;
-        @extend %trois-petit-point;
-    }
-
-    .price {
-        padding-right: 19px;
-        padding-top: 25px;
-    }
-}
-
-.content-price-checkbox {
-    display: flex;
-}
-
-.checkbox {
-    margin-right: -67px;
-    background-color: #99E2D0;
-    color: white;
-    padding: 20px;
-    transition: margin-right 500ms ease-in-out;
-    border-radius: 0px 15px 15px 0px;
-    display: flex;
-    align-items: center;
-}
-
-.description-top {
-    padding-bottom: 7px;
-    font-size: 16px;
-    @extend %trois-petit-point;
-}
-
-.description-bottom {
-    font-size: $font-size14;
-    font-weight: 300;
-    @extend %trois-petit-point;
-
-    @media (min-width:912px) {
-        font-size: $font-size16;
-    }
+    @include choix;
 }
 
 
 .plats {
     padding: 0 8px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-
-    .title {
-        font-size: 16px;
-        padding: 24px 0 15px 13px;
-
-    }
-
-    @extend %media-query-choix;
-    @include main-titre;
-
-}
-
-.desserts {
-    padding: 0 8px;
-    -webkit-animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-    animation: puff-in-center 1.5s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+    animation: menu-appear ease-in-out 1500ms 1s backwards;
 
     .title {
         font-size: 16px;
@@ -494,6 +381,23 @@ main {
     @extend %media-query-choix;
     @extend %title-choix;
     @include main-titre;
+
+
+}
+
+.desserts {
+    padding: 0 8px;
+    animation: menu-appear ease-in-out 1500ms 2s backwards;
+
+    .title {
+        font-size: 16px;
+        padding: 24px 0 15px 13px;
+    }
+
+    @extend %media-query-choix;
+    @extend %title-choix;
+    @include main-titre;
+
 }
 
 .boutton-commander {
@@ -505,29 +409,6 @@ main {
 
 }
 
-
-%padding-bottom {
-    padding-bottom: 10px;
-}
-
 footer {
-    @include footer;
-
-    .contact {
-        cursor: pointer;
-    }
-
-    a {
-        text-decoration: none;
-        color: $secondary-color;
-    }
-
-    @media (min-width:912px) {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-        align-items: baseline;
-        @include footer-desktop;
-    }
-
+    @include footer-desktop;
 }
