--- a/accueil/style.css
+++ b/accueil/style.css
@@ -16,15 +16,6 @@
 /******************************************************************************************/
 /******************************************************************************************/
 /******************************************************************************************/
-ul i.fa-solid.fa-utensils {
-  padding-right: 10px;
-}
-ul i.fa-solid.fa-handshake-angle {
-  padding-right: 5px;
-}
-
-/******************************************************************************************/
-/******************************************************************************************/
 /*************************************************************************************/
 .center {
   display: flex;
@@ -34,7 +25,7 @@ ul i.fa-solid.fa-handshake-angle {
   min-height: 100vh;
   background: #000;
   overflow: hidden;
-  z-index: 0;
+  z-index: -1;
   animation: center 3s linear;
   position: fixed;
   opacity: 0;
@@ -99,8 +90,12 @@ ul i.fa-solid.fa-handshake-angle {
 }
 /******************************************************************************************/
 nav img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  margin: 15px 0 5px 74px;
+  margin-top: 30px;
+  margin-bottom: 5px;
   background: #FFFFFF;
 }
 @media (min-width: 912px) {
@@ -108,7 +103,7 @@ nav img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 15px;
     width: 18%;
   }
@@ -116,15 +111,11 @@ nav img {
 nav p {
   background: #EAEAEA;
   width: 100%;
-  padding: 15px 91px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
   box-shadow: inset 0px 28px 11px -30px rgba(0, 0, 0, 0.28);
   font-size: 14px;
-}
-@media (min-width: 912px) {
-  nav p {
-    text-align: center;
-    font-size: 16px;
-  }
 }
 nav i.fa-sharp.fa-solid.fa-location-dot {
   padding-right: 13px;
@@ -134,6 +125,8 @@ nav i.fa-sharp.fa-solid.fa-location-dot {
 header {
   background: #F6F6F6;
   text-align: center;
+  padding-bottom: 29px;
+  font-family: "Roboto", sans-serif;
 }
 header h3 {
   padding: 20px 44px 20px 42px;
@@ -153,19 +146,28 @@ header p {
     font-size: 16px;
   }
 }
-header button {
+header .button {
   background: linear-gradient(193.33deg, #FF79DA -11.44%, #9356DC 123.93%);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
   color: #FFFFFF;
-  padding: 13px 18px;
-  border: none;
-  margin-bottom: 20px;
+  margin-left: auto;
+  font-size: 14px;
+  padding: 15px;
+  margin-right: auto;
   cursor: pointer;
+  border: none;
+  width: 60%;
 }
-header button:hover {
+header .button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  color: rgba(255, 255, 255, 0.8117647059);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+}
+@media (min-width: 912px) {
+  header .button {
+    width: 15%;
+  }
 }
 
 /******************************************************************************************/
@@ -201,7 +203,7 @@ header button:hover {
 }
 
 /******************************************************************************************/
-.btn {
+.fonctionnement-page {
   background: #F7F7F7;
   padding: 20px;
   border: none;
@@ -212,13 +214,13 @@ header button:hover {
   position: relative;
 }
 @media (min-width: 912px) {
-  .btn {
+  .fonctionnement-page {
     width: 25%;
     padding: 26px;
     margin-right: 37px;
   }
 }
-.btn .circle-number {
+.fonctionnement-page .circle-number {
   position: absolute;
   display: inline-block;
   left: -10px;
@@ -233,7 +235,7 @@ header button:hover {
   font-family: "Roboto", sans-serif;
   animation: none;
 }
-.btn.btn3 {
+.fonctionnement-page.btn3 {
   margin-bottom: 60px;
 }
 
@@ -320,7 +322,7 @@ i.fa-solid.fa-heart.fa-stack-1x {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  transition: transform, background-image 1s;
+  transition: opacity 3s ease-in-out;
 }
 i.fa-solid.fa-heart.fa-stack-1x:hover {
   background-image: linear-gradient(#FF79DA, #9356DC);
@@ -361,11 +363,11 @@ footer li, footer ul {
   padding-bottom: 10px;
 }
 
-.btn i.fa-solid.fa-mobile-screen-button, .btn i.fa-solid.fa-list-ul, .btn i.fa-solid.fa-store {
+.fonctionnement-page i.fa-solid.fa-mobile-screen-button, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-store {
   padding-right: 25px;
 }
 
-.btn i.fa-solid.fa-mobile-screen-button, .btn i.fa-solid.fa-list-ul, .btn i.fa-solid.fa-store {
+.fonctionnement-page i.fa-solid.fa-mobile-screen-button, .fonctionnement-page i.fa-solid.fa-list-ul, .fonctionnement-page i.fa-solid.fa-store {
   padding-left: 10px;
 }
 
@@ -373,22 +375,23 @@ footer li, footer ul {
 footer {
   background: #353535;
   color: #FFFFFF;
-  padding-left: 15px;
-  padding: 72px 0 20px;
-}
-footer .contact {
+  padding: 4px 18px 20px;
+  font-size: 14px;
   cursor: pointer;
-}
-footer a {
-  text-decoration: none;
-  color: #FFFFFF;
 }
 @media (min-width: 912px) {
   footer {
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
+    align-items: baseline;
+    padding-left: 15px;
+    padding: 72px 0 20px;
   }
+}
+footer a {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 footer .para-logo {
   font-family: "Shrikhand", cursive;
@@ -416,10 +419,7 @@ footer ul {
     padding-right: 20px;
   }
 }
-
-ul i.fa-solid.fa-utensils {
-  padding-right: 10px;
-}
-ul i.fa-solid.fa-handshake-angle {
-  padding-right: 5px;
+footer li a {
+  text-decoration: none;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
