--- a/accueil/style.scss
+++ b/accueil/style.scss
@@ -23,44 +23,58 @@ $font-size18: 18px;
 
 /**************************************************************/
 @mixin nav {
-    nav {
+    img {
 
-        img {
-            width: 50%;
-            margin: 15px 0 5px 74px;
-            background: $secondary-color;
-        }
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        margin-top: 30px;
+        margin-bottom: 5px;
+        background: $secondary-color;
 
-        p {
-            background: #EAEAEA;
-            width: 100%;
-            padding: 15px 91px;
-            box-shadow: inset 0px 28px 11px -30px rgba(0, 0, 0, 0.28);
-            font-size: 14px;
+        @media (min-width:912px) {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 20px;
+            margin-bottom: 15px;
+            width: 18%;
         }
+    }
 
-        i.fa-sharp.fa-solid.fa-location-dot {
-            padding-right: 13px;
-        }
+    p {
+        background: #EAEAEA;
+        width: 100%;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        text-align: center;
+        box-shadow: inset 0px 28px 11px -30px rgba(0, 0, 0, 0.28);
+        font-size: 14px;
+    }
+
+    i.fa-sharp.fa-solid.fa-location-dot {
+        padding-right: 13px;
     }
 }
 
 /******************************************************************************************/
-@mixin btn {
+@mixin btn-menu {
     background: linear-gradient(193.33deg, #FF79DA -11.44%, #9356DC 123.93%);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
     color: $secondary-color;
-    padding: 13px 18px;
+    padding: 15px 50px;
     border: none;
-    margin-bottom: 20px;
+    margin: 30px 0 40px 63px;
     cursor: pointer;
 
     &:hover {
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+        color: #ffffffcf;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
-
     }
+
 }
 
 /******************************************************************************************/
@@ -71,101 +85,63 @@ $font-size18: 18px;
 /******************************************************************************************/
 @mixin footer {
     background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 25px;
+    color: $secondary-color;
+    padding: 4px 18px 20px;
+    font-size: $font-size14;
+    cursor: pointer;
 
-    p {
+    @media (min-width:912px) {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+        align-items: baseline;
+        padding-left: 15px;
+        padding: 72px 0 20px;
+    }
+
+    a {
+
+        text-decoration: none;
+        color: $secondary-color;
+
+    }
+
+    .para-logo {
         font-family: 'Shrikhand', cursive;
         padding: 16px 0px;
+
+        @media (min-width:912px) {
+            padding: 0 50px;
+            font-size: $font-size18;
+        }
     }
 
     ul {
         list-style: none;
         font-size: $font-size14;
-        @extend padding-bottom;
-    }
-
-    li {
-        @extend padding-bottom;
-
-    }
-
-}
-
-ul {
-    i.fa-solid.fa-utensils {
-        padding-right: 10px;
-    }
-
-    i.fa-solid.fa-handshake-angle {
-        padding-right: 5px;
-    }
-}
-
-/******************************************************************************************/
-@mixin nav-desktop {
-
-    img {
-        width: 50%;
-        margin: 15px 0 5px 74px;
-        background: $secondary-color;
-
-        @media (min-width:912px) {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 10px;
-            margin-bottom: 15px;
-            width: 18%;
-        }
-    }
-}
-
-/******************************************************************************************/
-@mixin footer-desktop {
-
-    footer {
-        background: $footer-color;
-        color: #FFFFFF;
-        padding-left: 15px;
-        padding: 72px 0 20px;
+        @extend %padding-bottom;
 
         @media (min-width:912px) {
             display: flex;
-            flex-direction: row-reverse;
-            justify-content: flex-start;
-        }
-
-        .para-logo {
-            font-family: 'Shrikhand', cursive;
-            padding: 16px 0px;
-
-            @media (min-width:912px) {
-                padding: 0 50px;
-                font-size: $font-size18;
-            }
-        }
-
-        ul {
-            list-style: none;
-            font-size: $font-size14;
-            @extend %padding-bottom;
-
-            @media (min-width:912px) {
-                display: flex;
-                flex-direction: row;
-                align-items: flex-end;
-            }
-        }
-
-        li {
-            @extend %padding-bottom;
-
-            @media (min-width:912px) {
-                padding-right: 20px;
-            }
+            flex-direction: row;
+            align-items: flex-end;
         }
     }
+
+    li {
+        @extend %padding-bottom;
+
+        @media (min-width:912px) {
+            padding-right: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: $secondary-color;
+        }
+    }
+
+
 }
 
 /*************************************************************************************/
@@ -177,119 +153,91 @@ ul {
     min-height: 100vh;
     background: #000;
     overflow: hidden;
-    z-index: 0;
-   animation: center 3s linear;
+    z-index: -1;
+    animation: center 3s linear;
     position: fixed;
     opacity: 0;
     width: 100%;
     height: 100%;
     top: 0;
 
-.ring {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    animation: ring 1s linear infinite;
+    .ring {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        animation: ring 1s linear infinite;
+    }
+
+    @keyframes ring {
+        0% {
+
+            transform: rotate(0deg);
+            box-shadow: 1px 5px 2px #e65c00;
+        }
+
+        50% {
+            transform: rotate(180deg);
+            box-shadow: 1px 5px 2px #18b201;
+        }
+
+        100% {
+            transform: rotate(360deg);
+            box-shadow: 1px 5px 2px #0456c8;
+        }
+    }
+
+    .ring:before {
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        box-shadow: 0 0 5px rgba(255, 255, 255, .3);
+    }
+
+    .loader {
+        color: #ffffff;
+        font-size: 20px;
+        font-family: 'Shrikhand', cursive;
+        letter-spacing: 1px;
+        line-height: 200px;
+        animation: text 3s ease-in-out infinite;
+    }
+
+    @keyframes text {
+        50% {
+            color: black;
+        }
+    }
 }
 
-@keyframes ring {
+@keyframes center {
     0% {
-
-        transform: rotate(0deg);
-        box-shadow: 1px 5px 2px #e65c00;
-    }
-
-    50% {
-        transform: rotate(180deg);
-        box-shadow: 1px 5px 2px #18b201;
-    }
-
-    100% {
-        transform: rotate(360deg);
-        box-shadow: 1px 5px 2px #0456c8;
-    }
-}
-
-.ring:before {
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    box-shadow: 0 0 5px rgba(255, 255, 255, .3);
-}
-
-.loader {
-    color: #ffffff;
-    font-size: 20px;
-    font-family: 'Shrikhand', cursive;
-    letter-spacing: 1px;
-    line-height: 200px;
-    animation: text 3s ease-in-out infinite;
-}
-
-@keyframes text {
-    50% {
-        color: black;
-    }
-}
- }
- @keyframes center {
-    0%{
         opacity: 1;
         z-index: 10;
     }
-    100%{
 
-       opacity: 0;
-       z-index: 0;
+    100% {
+
+        opacity: 0;
+        z-index: 0;
     }
- }
+}
+
 /******************************************************************************************/
 nav {
-
-    img {
-        width: 50%;
-        margin: 15px 0 5px 74px;
-        background: $secondary-color;
-
-        @media (min-width:912px) {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 10px;
-            margin-bottom: 15px;
-            width: 18%;
-        }
-    }
-
-    p {
-        background: #EAEAEA;
-        width: 100%;
-        padding: 15px 91px;
-        box-shadow: inset 0px 28px 11px -30px rgba(0, 0, 0, 0.28);
-        font-size: 14px;
-
-        @media (min-width:912px) {
-            text-align: center;
-            font-size: $font-size16;
-        }
-
-    }
-
-    i.fa-sharp.fa-solid.fa-location-dot {
-        padding-right: 13px;
-    }
-
+@include nav;
 }
 
 /******************************************************************************************/
 header {
     background: $primary-color;
     text-align: center;
+    padding-bottom: 29px;
+    font-family: 'Roboto', sans-serif;
 
     h3 {
         padding: 20px 44px 20px 42px;
@@ -309,9 +257,28 @@ header {
         }
     }
 
-    button {
-        @include btn;
+    .button {
+        background: linear-gradient(193.33deg, #FF79DA -11.44%, #9356DC 123.93%);
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 25px;
+        color: #FFFFFF;
+        margin-left: auto;
+        font-size: 14px;
+        padding: 15px;
+        margin-right: auto;
+        cursor: pointer;
+        border: none;
+        width: 60%;
 
+        &:hover {
+            background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+            color: #ffffffcf;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        }
+
+        @media (min-width:912px) {
+            width: 15%;
+        }
     }
 }
 
@@ -347,7 +314,7 @@ header {
 }
 
 /******************************************************************************************/
-.btn {
+.fonctionnement-page {
     background: #F7F7F7;
     padding: 20px;
     border: none;
@@ -356,6 +323,8 @@ header {
     border-radius: 20px;
     width: 100%;
     position: relative;
+
+
 
     @media (min-width:912px) {
         width: 25%;
@@ -487,7 +456,7 @@ i.fa-solid.fa-heart.fa-stack-1x {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    transition: transform, background-image 1s;
+    transition: opacity 3s ease-in-out;
 
     &:hover {
         background-image: linear-gradient(#FF79DA, #9356DC);
@@ -542,63 +511,5 @@ i.fa-solid.fa-heart.fa-stack-1x {
 
 /******************************************************************************************/
 footer {
-    background: $footer-color;
-    color: #FFFFFF;
-    padding-left: 15px;
-    padding: 72px 0 20px;
-
-    .contact {
-        cursor: pointer;
-    }
-
-    a {
-        text-decoration: none;
-        color: $secondary-color;
-    }
-
-    @media (min-width:912px) {
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: flex-start;
-    }
-
-    .para-logo {
-        font-family: 'Shrikhand', cursive;
-        padding: 16px 0px;
-
-        @media (min-width:912px) {
-            padding: 0 50px;
-            font-size: $font-size18;
-        }
-    }
-
-    ul {
-        list-style: none;
-        font-size: $font-size14;
-        @extend %padding-bottom;
-
-        @media (min-width:912px) {
-            display: flex;
-            flex-direction: row;
-            align-items: flex-end;
-        }
-    }
-
-    li {
-        @extend %padding-bottom;
-
-        @media (min-width:912px) {
-            padding-right: 20px;
-        }
-    }
-}
-
-ul {
-    i.fa-solid.fa-utensils {
-        padding-right: 10px;
-    }
-
-    i.fa-solid.fa-handshake-angle {
-        padding-right: 5px;
-    }
+    @include footer;
 }
