--- a/delicedessens/style.css
+++ b/delicedessens/style.css
@@ -80,12 +80,12 @@ nav .fleche .lien-vers-accueil {
   text-decoration: none;
 }
 nav i.fa-solid.fa-arrow-left {
-  padding-left: 30px;
+  padding-left: 15px;
 }
 nav .photo-logo {
   width: 50%;
-  margin-left: 52px;
-  margin-right: 57px;
+  margin-left: 46px;
+  margin-right: 80px;
 }
 @media (min-width: 912px) {
   nav .photo-logo {
@@ -143,7 +143,7 @@ main .h3-et-coeur i.fa-solid.fa-heart.fa-stack-1x {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  transition: transform, background-image 1s;
+  transition: opacity 3s ease-in-out;
   cursor: pointer;
 }
 main .h3-et-coeur i.fa-solid.fa-heart.fa-stack-1x:hover {
@@ -180,7 +180,7 @@ main .title:after {
   padding: 0 8px;
   font-size: 16px;
   padding: 24px 0 15px 13px;
-  animation: puff-in-center 1.5s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+  animation: menu-appear ease-in-out 1500ms backwards;
 }
 @media (min-width: 912px) {
   .entrées {
@@ -194,15 +194,17 @@ main .title:after {
     margin: 0;
   }
 }
-@keyframes puff-in-center {
+
+@keyframes menu-appear {
   0% {
-    transform: scale(2);
-    filter: blur(4px);
+    transform: translateY(50px);
     opacity: 0;
   }
+  50% {
+    opacity: 0.5;
+  }
   100% {
-    transform: scale(1);
-    filter: blur(0px);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -237,7 +239,7 @@ main .title:after {
 
 .plats {
   padding: 0 8px;
-  animation: puff-in-center 1.5s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+  animation: menu-appear ease-in-out 1500ms 1s backwards;
 }
 .plats .title {
   font-size: 16px;
@@ -259,7 +261,7 @@ main .title:after {
 
 .desserts {
   padding: 0 8px;
-  animation: puff-in-center 1.5s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+  animation: menu-appear ease-in-out 1500ms 2s backwards;
 }
 .desserts .title {
   font-size: 16px;
@@ -307,15 +309,8 @@ footer li, footer ul {
 footer {
   background: #353535;
   color: #FFFFFF;
-  padding-left: 15px;
-  padding: 72px 0 20px;
-}
-footer .contact {
+  padding: 4px 18px 20px;
   cursor: pointer;
-}
-footer a {
-  text-decoration: none;
-  color: #FFFFFF;
 }
 @media (min-width: 912px) {
   footer {
@@ -323,14 +318,20 @@ footer a {
     flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: baseline;
+    padding-left: 15px;
+    padding: 72px 0 20px;
   }
 }
-footer .para-logo {
+footer a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+footer a .para-logo {
   font-family: "Shrikhand", cursive;
   padding: 16px 0px;
 }
 @media (min-width: 912px) {
-  footer .para-logo {
+  footer a .para-logo {
     padding: 0 50px;
     font-size: 18px;
   }
