--- a/accueil/style.css
+++ b/accueil/style.css
@@ -98,7 +98,7 @@ nav img {
   margin-bottom: 5px;
   background: #FFFFFF;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   nav img {
     display: block;
     margin-left: auto;
@@ -131,7 +131,7 @@ header {
 header h3 {
   padding: 20px 44px 20px 42px;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   header h3 {
     font-size: 2rem;
   }
@@ -141,7 +141,7 @@ header p {
   font-size: 14px;
   font-weight: 300;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   header p {
     font-size: 16px;
   }
@@ -164,7 +164,7 @@ header .button:hover {
   color: rgba(255, 255, 255, 0.8117647059);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   header .button {
     width: 15%;
   }
@@ -174,30 +174,31 @@ header .button:hover {
 .fonctionnement {
   padding: 20px;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .fonctionnement {
     display: flex;
     flex-direction: column;
-    padding-left: 46px;
+    padding: 20px 10%;
   }
 }
 
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .boutton-fonctionnement {
     display: flex;
     flex-direction: row;
-    padding-right: 37px;
     justify-content: center;
     align-items: baseline;
+    padding: 20px;
+    gap: 39px;
   }
 }
 
 .h3-fonctionnement {
-  padding: 48px 0 30px 20px;
+  padding: 20px;
+  padding-left: 0;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .h3-fonctionnement {
-    margin-left: 80px;
     font-size: 24px;
   }
 }
@@ -213,11 +214,10 @@ header .button:hover {
   width: 100%;
   position: relative;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .fonctionnement-page {
-    width: 25%;
+    width: 100%;
     padding: 26px;
-    margin-right: 37px;
   }
 }
 .fonctionnement-page .circle-number {
@@ -243,30 +243,35 @@ header .button:hover {
 main {
   background: #F6F6F6;
   padding-bottom: 66px;
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  main section {
+    padding: 20px 10%;
+    padding-bottom: 60px;
+  }
 }
 main .lien-vers-menu {
   color: black;
   text-decoration: none;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   main .restaurants {
-    display: flex;
-    row-gap: 30px;
-    -moz-column-gap: 30px;
-         column-gap: 30px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 48% 48%;
+    grid-gap: 4%;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
   }
 }
 main .h3-restaurants {
-  padding: 48px 0 30px 20px;
+  padding: 20px;
+  padding-left: 0;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   main .h3-restaurants {
     font-size: 24px;
-    padding-left: 118px;
   }
 }
 main .card {
@@ -277,9 +282,9 @@ main .card {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   position: relative;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   main .card {
-    width: 40%;
+    margin: 0;
   }
 }
 main .card .tag-nouveau {
@@ -337,7 +342,7 @@ i.fa-solid.fa-heart.fa-stack-1x:hover {
   -o-object-fit: cover;
      object-fit: cover;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .card img {
     height: 220px;
     width: 100%;
@@ -348,7 +353,7 @@ i.fa-solid.fa-heart.fa-stack-1x:hover {
 .card h4 {
   padding: 16px 0 5px 13px;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   .card h4 {
     font-size: 18px;
   }
@@ -379,7 +384,7 @@ footer {
   font-size: 14px;
   cursor: pointer;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   footer {
     display: flex;
     flex-direction: row-reverse;
@@ -397,7 +402,7 @@ footer .para-logo {
   font-family: "Shrikhand", cursive;
   padding: 16px 0px;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   footer .para-logo {
     padding: 0 50px;
     font-size: 18px;
@@ -407,14 +412,14 @@ footer ul {
   list-style: none;
   font-size: 14px;
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   footer ul {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
   }
 }
-@media (min-width: 912px) {
+@media (min-width: 768px) {
   footer li {
     padding-right: 20px;
   }
